# postgres-tui

./: Cargo.toml  Makefile
src/: app.rs  main.rs
src/postgres/: connection_manager.rs  connection_pool_manager.rs  credential_manager.rs  mod.rs
src/ui/: datatable.rs  help_window.rs  mod.rs
src/widgets/: database_table.rs
