[package]
name = "postgres_tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
tui = "0.19.0"
tokio = { version = "1.11.0", features = ["full"] }
postgres = "0.19.4"
unicode-width = "0.1"
ratatui = "0.26.1"
cli-log = "2.1.0"
tokio-postgres = "0.7.13"
deadpool-postgres = "0.14.1"
keyring = "3.6.2"
sqlite = "0.37.0"

